# test_api

./: .env.dev  README.md  docker-compose.yml  pyproject.toml  requirements.txt
core/: consumers.py
templates/: home.html
test_api/: asgi.py  settings.py  urls.py  wsgi.py
