[tool.poetry]
name = "test-api"
version = "0.1.0"
description = ""
authors = ["tavkhelidzeluka <tavkhelidzeluka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
markdown = "^3.7"
channels = {extras = ["daphne"], version = "^4.1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
